@@ -627,6 +627,8 @@ Other memory:
 	  unsetenv
 	* Add environment variables APIs:  environ, getenv, putenv, clearenv, setenv,
 	  unsetenv
+	* Correct an error in realloc() when the block is extended "down" in memory.
+	  In this case, the old memory contents need to be copied to the new location.
 	* Started m68322
 </pre></ul>
 
